# plex-discord-rpc

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
src/: main.rs
src/application/: auth_service.rs  mod.rs  monitor_service.rs
src/domain/: models.rs  traits.rs
src/infrastructure/: config_store.rs  discord_client.rs  mod.rs  plex_client.rs
src/presentation/: ui.rs
