[package]
name = "plex-discord-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = { version = "0.33.3" }
egui = "0.33.3"

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "query"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"


# Discord RPC
discord-presence-rs = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.20", features = ["v4"] }

url = "2.5"


# Browser opening for OAuth
webbrowser = "1.0"

# Persistent storage
directories = "6.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
thiserror = "2.0"

async-trait = "0.1"

[dev-dependencies]
mockall = "0.14"
